added styling to trailer

--- a/Style1.css
+++ b/Style1.css
@@ -24,3 +24,14 @@ nav#navvy.navbar.navbar-static-top {
 #navvy a:hover {
     background: none;
 }
+
+/* Trailer Styling */
+
+.mainSec {
+    background-image: url('Images/junkyard.jpg');
+    background-size: cover;
+}
+
+h1.container#trailer {
+    text-align: right;
+}
