--- a/Style1.css
+++ b/Style1.css
@@ -1,4 +1,9 @@
-﻿﻿/* Header Styling */
+﻿/* General Styling */
+body {
+    background-color: #FFF6F0;
+}
+
+﻿/* Header Styling */
 #logoImg {
     width:200px;
 }
@@ -36,4 +41,9 @@ h1.container#trailer {
     text-align: right;
 }
 
-/**/
+/*Preview Section Styling*/
+
+.previewThem {
+        margin: auto;
+}
+
