fixed drop down bar

--- a/Style1.css
+++ b/Style1.css
@@ -24,3 +24,12 @@ nav#navvy.navbar.navbar-static-top {
 #navvy a:hover {
     background: none;
 }
+
+/* Button */
+button.navbar-toggle {
+    border: 1px solid #FFF6F0;
+}
+
+span.icon-bar {
+    border: 1px solid #FFF6F0;
+}
